[package]
name = "net-info"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "net-info"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.3"
get_if_addrs = "0.5.3"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
netstat2 = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
